--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile group: 'net.serenity-bdd', name: 'serenity-screenplay-webdriver', version: '2.1.6'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     implementation group: 'net.serenity-bdd', name: 'serenity-ensure', version: '2.0.49'
+
+    compile group: 'javax.mail', name: 'mail', version: '1.4'
+
 }
