--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     implementation group: 'net.serenity-bdd', name: 'serenity-ensure', version: '2.0.49'
 
+    implementation group: 'com.oracle.ojdbc', name: 'ojdbc8', version:'19.3.0.0'
     compile group: 'javax.mail', name: 'mail', version: '1.4'
 
 }
